# unricopie

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: add-project.yml  config.yml
.github/workflows/: deploy.yml  refresh-stats.yml  validate.yml
public/: robots.txt
scripts/: import-decomps.mjs  normalize-data.mjs  refresh-stats.mjs  validate-data.mjs
src/: content.config.ts
src/components/: Card.astro  ProjectForm.astro
src/components/pages/: CatalogView.astro  ContributePage.astro  DecompsPage.astro  FaqPage.astro  HomePage.astro  ItemDetailPage.astro  LaunchersPage.astro  PortsPage.astro  UnricopiePage.astro
src/data/: stats.json
src/data/decomps/: 1080-snowboarding.yaml  alice-in-wonderland-2010.yaml  animal-crossing.yaml  black-white.yaml  castlevania-order-of-ecclesia.yaml  castlevania-symphony-of-the-night.yaml  chrono-cross.yaml  crash-bandicoot-the-wrath-of-cortex.yaml  e.yaml  (+110 more)
src/i18n/: index.ts  ui.ts
src/layouts/: Base.astro
src/lib/: catalog.ts  consoles.ts  site.ts  stats.ts  status.ts  url.ts
src/pages/: acerca.astro  contribuir.astro  decompilaciones.astro  faq.astro  index.astro  launchers.astro  ports.astro  privacy.astro  search.json.js  terms.astro  unricopie.astro
src/styles/: global.css
unricopie-launcher/: README.md  ROADMAP.md  index.html  package.json
unricopie-launcher/src/: main.js
unricopie-launcher/src-tauri/: Cargo.toml  tauri.conf.json
unricopie-launcher/src-tauri/src/: main.rs
(+121 files in other folders)
